[tool.poetry]
name = "hydrocron-db"
version = "0.1.0"
description = "Backend database configuration for Hydrocron API"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "hydrocron_db"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.147"
botocore = "^1.29.147"
geopandas = "^0.13.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
moto = "^4.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
