[tool.poetry]
name = "hydrocron"
version = "0.0.1"
description = "Hydrocron API - tool for hydrology"
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/hydrocron-api"
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.147"
botocore = "^1.29.147"
geopandas = "^0.13.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
