[tool.poetry]
name = "hydrocron-db"
version = "0.1.0"
description = "Backend database configuration for Hydrocron API"
authors = ["PO.DAAC <podaac@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "hydrocron_db"}]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.13.2"
earthaccess = "^0.5.3"
boto3 = "^1.28"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-dynamodb = "^2.2.3"

[tool.poetry.scripts]
hydrocron_load = 'hydrocron_db.load_data:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
